<resources>
    <string name="app_name">Lab4</string>
    <string name="hello_message">this is just a test</string>
    <string name="ButtonText">i am a button</string>
    <string name="textView1">here are my widghets:</string>
    <string name="button1">BUTTON</string>
    <string name="checkbox1">Check this out</string>
    <string name="Switch1">Switch on / off</string>
    <string name="textview2"> please type here</string>
    <string name="enterEmailAd"> Enter your email address: </string>
    <string name="emailHint"> Type email here </string>
    <string name="enterPwd"> Type your password: </string>
    <string name="yourProfile">Your profile</string>
    <string name="yourName">Your name: </string>
    <string name="enterYourName">Enter your name</string>
    <string name="yourEmail">Your email: </string>
    <string name="enterYourEmail">Enter your email</string>
    <string name="yourPicture">Your picture: </string>
    <string name="clickButton">Click the button above to take a picture: </string>
    <string name="GotoChat">GoToChat</string>
    <string name="sendButton">Send</string>
    <string name="receiveButton">Receive</string>
    <string name="textInput">please input test here</string>
    <string name="GoToToobarButton">ToolBar</string>
    <string name="menuName1">menu1</string>
    <string name="menuName2">menu2</string>
    <string name="menuName3">menu3</string>
    <string name="menuName4">menu4</string>
    <string name="search">search something</string>
</resources>
