<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/YourProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yourProfile"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yourName" />

    <EditText
        android:id="@+id/enterYourName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterYourName"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enterYourEmail" />

    <EditText
        android:id="@+id/yourEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yourPicture"/>

    <ImageButton
        android:src="@android:drawable/picture_frame"
        android:id="@+id/imageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/clickButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clickButton"/>

    <Button
        android:id="@+id/GotoChat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/GotoChat" />




</LinearLayout>