<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sendButton"
            android:layout_alignParentLeft="true"/>

        <Button
            android:id="@+id/receiveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receiveButton"
            android:layout_alignParentRight="true"/>

        <EditText
            android:id="@+id/inputText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/receiveButton"
            android:layout_toRightOf="@+id/sendButton"
            android:hint="@string/textInput" />

    </RelativeLayout>


</LinearLayout>